# attr_utils

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pypycoveragerc  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  co_annotations.py  demo.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: co_annotations.yml  codeql.yml  conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
attr_utils/: __init__.py  annotations.py  autoattrs.py  autodoc_typehints.py  docstrings.py  mypy_plugin.py  pprinter.py  serialise.py  utils.py
doc-source/: Source.rst  conf.py  contributing.rst  demo.rst  fixed_version_change.py  index.rst  license.rst  requirements.txt  rtd-extra-deps.txt
doc-source/api/: annotations.rst  attr_utils.rst  autoattrs.rst  autodoc_typehints.rst  docstrings.rst  mypy_plugin.rst  pprinter.rst  serialise.rst  utils.rst
snapshottest/: diff.py  module.py  reporting.py  unittest.py
tests/: conftest.py  requirements.txt  setup.cfg  test_annotations.py  test_autodoc.py  test_autodoc_typehints.py  test_docstrings.py  test_mypy_plugin.yml  test_pprinter.py  test_serialise.py  test_setup.py
tests/attrs_serde_tests/: test_benchmark.py  test_dict.py
tests/attrs_serde_tests/snapshots/: snap_test_dict.py
tests/roots/test-dummy/: conf.py  dummy_module.py
tests/test_output/: conftest.py  test_output.py
tests/test_output/doc-test/test-root/: annotations.rst  autoattrs.rst  conf.py  docstrings.rst  index.rst
tests/test_output/test_output/: test_html_output_annotations_html_.html  test_html_output_autoattrs_36_autoattrs_html_.html  test_html_output_autoattrs_autoattrs_html_.html  test_html_output_docstrings_html_.html  test_html_output_index_html_.html
tests/test_output/test_output_/: test_html_output_annotations_html_.html  test_html_output_autoattrs_36_autoattrs_html_.html  test_html_output_autoattrs_autoattrs_html_.html  test_html_output_docstrings_html_.html
