[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "attr_utils"
version = "0.5.6"
description = "Utilities to augment attrs."
readme = "README.rst"
keywords = [ "attrs", "serde", "sphinx", "documentation",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/attr_utils"
"Issue Tracker" = "https://github.com/domdfcoding/attr_utils/issues"
"Source Code" = "https://github.com/domdfcoding/attr_utils"
Documentation = "https://attr_utils.readthedocs.io/en/latest"

[project.optional-dependencies]
sphinx = [ "sphinx<3.4.0,>=3.0.3", "sphinx-toolbox>=1.4.0",]
all = [ "sphinx<3.4.0,>=3.0.3", "sphinx-toolbox>=1.4.0",]
